# rocm-install-on-linux

./: .gitignore  .readthedocs.yaml  .wordlist.txt  LICENSE  README.md  pyproject.toml  tasks.py
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: promote_develop_install_into_mainline.yml  promote_develop_to_external.yml  promote_mainline_into_develop.yml  promote_rocm_rel_to_external.yml
docs/: conf.py  index.md  index.rst
docs/docker_examples/torch/: dockerfile_from_dev_ubuntu
docs/how-to/: MI300-Passthrough.rst  amdgpu-install.rst  deep-learning-rocm.md  docker.md  docker.rst  index.md  index.rst  multi-version-install.rst  prerequisites.md  prerequisites.rst  spack-intro.md  spack.rst
docs/how-to/install/: index.md  install.md  install.md.jinja  uninstall.md  upgrade.md
docs/how-to/native-install/: index.rst  install-faq.rst  install-rocm-template.rst  multi-version-install.rst  ol.rst  package-manager-integration.rst  post-install.rst  rhel.rst  sle.rst  sles.rst  ubuntu-wsl2-docker-desktop-win.rst  ubuntu.rst  uninstall-rocm-template.rst
docs/how-to/native-install/includes/: rhel-multi-install.rst  sles-multi-install.rst  ubuntu-multi-install.rst
docs/how-to/os-native/: index.md  install.md.jinja  package_manager_integration.md  uninstall.md  upgrade.md
docs/install/: amdgpu-install.rst  detailed-install.rst  install-overview.rst  post-install.rst  prerequisites.rst  quick-start.rst  rocm-offline-installer.rst
docs/install/native-install/: index.rst  install-rocm-template.rst  multi-version-install.rst  rhel.rst  sles.rst  ubuntu.rst  uninstall-rocm-template.rst
docs/install/native-install/includes/: rhel-multi-install.rst  sles-multi-install.rst  ubuntu-multi-install.rst
docs/reference/: 3rd-party-support-matrix.md  3rd-party-support-matrix.rst  algorithm-libraries-support-matrix-content.rst  docker-image-support-matrix.rst  frequently-asked-questions.rst  install-faq.rst  linux-support.md  package-manager-integration.rst  system-requirements.rst  user-kernel-space-compat-matrix-content.rst  user-kernel-space-compat-matrix.md  user-kernel-space-compat-matrix.rst  windows-support.md
docs/sphinx/: _toc.yml.in  requirements.in  requirements.txt
docs/tutorial/: detailed-install.rst  install-overview.rst  install_overview.md  installation_commands.jinja  linux.template.jinja  quick-start.rst  quick_start.md  quick_start.md.jinja
src/offline-installer/: CMakeLists.txt  README.md  VERSION
src/offline-installer/UI/: CMakeLists.txt
src/offline-installer/UI/help_menus/: rocm_components_public.txt
src/offline-installer/UI/src/: config.h  create_menu.c  create_menu.h  debug_ui.h  driver_menu.c  driver_menu.h  extras_menu.c  extras_menu.h  help_menu.c  help_menu.h  install_types.h  menu_data.c  menu_data.h  rocm_menu.c  rocm_menu.h  rocm_offline_ui.c  summary_menu.c  summary_menu.h  utils.c  utils.h
src/offline-installer/scripts/: create-default.config  offline_init.sh
src/offline-installer/scripts/deb/: cleanup-create.sh  create-offline.sh
src/offline-installer/scripts/deb/installer-package/: cleanup-install.sh  install.sh  repo-offline-pin  repo-offline.list  repo.gpg
src/offline-installer/scripts/el/: cleanup-create.sh  create-offline.sh
src/offline-installer/scripts/el/installer-package/: cleanup-install.sh  install.sh  repo-offline.repo
src/offline-installer/scripts/sle/: cleanup-create.sh  create-offline.sh
src/offline-installer/scripts/sle/installer-package/: cleanup-install.sh  install.sh  repo-offline.repo
src/offline-installer/tests/: CMakeLists.txt  create-test-driver-only-5.7.3.config  create-test-driver-only-6.0.2.config  create-test-driver-only-6.1.1.config  create-test-driver-only-6.1.2.config  create-test-driver-only-6.1.3.config  create-test-driver-only-6.1.config  create-test-driver-only-6.2.1.config  create-test-driver-only-6.2.2.config  create-test-driver-only-6.2.config  create-test-hip-hiplibsdk-5.7.3.config  create-test-hip-hiplibsdk-6.0.2.config  create-test-hip-hiplibsdk-6.1.1.config  create-test-hip-hiplibsdk-6.1.2.config  create-test-hip-hiplibsdk-6.1.3.config  create-test-hip-hiplibsdk-6.1.config  create-test-hip-hiplibsdk-6.2.1.config  create-test-hip-hiplibsdk-6.2.2.config  create-test-hip-hiplibsdk-6.2.config  create-test-rocm-driver-5.7.3.config  create-test-rocm-driver-6.0.2.config  create-test-rocm-driver-6.1.1.config  create-test-rocm-driver-6.1.2.config  create-test-rocm-driver-6.1.3.config  create-test-rocm-driver-6.1.config  create-test-rocm-driver-6.2.1.config  create-test-rocm-driver-6.2.2.config  create-test-rocm-driver-6.2.config  create-test-rocm-graphics-5.7.3.config  create-test-rocm-graphics-6.0.2.config  create-test-rocm-graphics-6.1.1.config  create-test-rocm-graphics-6.1.2.config  create-test-rocm-graphics-6.1.3.config  create-test-rocm-graphics-6.1.config  create-test-rocm-graphics-6.2.1.config  create-test-rocm-graphics-6.2.2.config  create-test-rocm-graphics-6.2.config  create-test-rocm-only-5.7.3.config  create-test-rocm-only-6.0.2.config  create-test-rocm-only-6.1.1.config  (+6 more)
