[project]
name = "rocm-install-on-linux"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Logan Grado", email = "logan.grado@amd.com"},
]
dependencies = [
    "sphinx==5.3.0",
    "rocm-docs-core==0.35.0",
    "Sphinx-Substitution-Extensions==2022.2.16",
    "sphinxcontrib-datatemplates==0.11.0",
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "invoke>=2.2.0",
    "ipython>=8.22.2",
    "ipdb>=0.13.13",
]
